eks_files/deployment_client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: 904569689818.dkr.ecr.sa-east-1.amazonaws.com/eks_demo-client:v2
        ports:
        - containerPort: 5000
