eks_files/deployment_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: 904569689818.dkr.ecr.sa-east-1.amazonaws.com/eks_demo-server:v1
        ports:
        - containerPort: 50051
