eks_files/service_client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
