eks_files/service_server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
  type: ClusterIP
